    files to help with delivery of executables.  (Thanks to François-René
    Rideau)
  * bug fix: data race in GENTEMP fixed - it can no longer return the
    same interned symbol to multiple threads if called concurrently
  * bug fix: interrupting LOADing of FASLs does not leave functions without
    source locations. (lp#540276)

changes in sbcl-1.3.14 relative to sbcl-1.3.13:
  * minor incompatible change: the SB-PCL walker no longer recognizes
    macros expanding into a DECLARE expression. This is not a language change,
    since ANSI forbids such usage (X3J13 issue DECLARE-MACROS:FLUSH).
  * enhancement: for several macros such as MULTIPLE-VALUE-{BIND,SETQ}, COND,
    DO{,*,LIST}, {RESTART,HANDLER}-{BIND,CASE}, *CASE, conditions signaled
    during macroexpansion point to the form that caused the problem more
    accurately.
  * enhancement: the "--noinform" command-line option inhibits output from
    save-lisp-and-die in addition to removing the startup banner.
  * bug fix: PROCESS-KILL failed to return errno if the system call failed
  * optimization: slightly more comprehensive treatment of the keyword
    arguments to MAKE-ARRAY in compiler transformations.

changes in sbcl-1.3.13 relative to sbcl-1.3.12:
  * enhancement: SET triggers package locks on undefined variables.
    (lp#1645152)
  * enhancement: new Windows specific option to run-program, :escape-arguments
    (lp#1503496)
  * enhancement: recompiling a MAKE-INSTANCE form with an initarg :INITARG
    CONSTANT where CONSTANT names a constant variable picks up the new value
    of CONSTANT in case it has been redefined. (lp#1644944)
  * optimization: faster TYPEP on undefined at compile-time types and upcoming
    class definitions. (lp#1082967)
  * optimization: memory consumption of each STANDARD-OBJECT instance is
    reduced by 2 words if the compact-instance-header feature is enabled.
  * optimization: CONDITION instances are quicker to allocate.