@@ -1279,3 +1279,33 @@
   (assert (not (funcall (compile nil '(lambda (&rest args) (elt args 10))))))
   (assert (not (funcall (compile nil '(lambda (&rest args) (cadr args))))))
   (assert (not (funcall (compile nil '(lambda (&rest args) (third args)))))))
+
+(with-test (:name :local-notinline-functions)
+  (multiple-value-bind (start result end)
+      (funcall (checked-compile
+                `(lambda ()
+                   (values (sb-kernel:current-sp)
+                           (flet ((x () (cons 1 2)))
+                             (declare (notinline x))
+                             (let ((x (x)))
+                               (declare (dynamic-extent x))
+                               (true x))
+                             (true 10))
+                           (sb-kernel:current-sp)))))
+    (assert (sb-sys:sap= start end))
+    (assert result))
+  (multiple-value-bind (start result end)
+      (funcall (checked-compile
+                `(lambda ()
+                   (declare (optimize speed))
+                   (values (sb-kernel:current-sp)
+                           (flet ((x () (cons 1 2)))
+                             (let ((x (x))
+                                   (y (x)))
+                               (declare (dynamic-extent x y))
+                               (true x)
+                               (true y))
+                             (true 10))
+                           (sb-kernel:current-sp)))))
+    (assert (sb-sys:sap= start end))
+    (assert result)))
